adicionando separação de dias uteis e finais de semana

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -2,72 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1070,
+   "execution_count": 1087,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[263.235 125.427 186.151 325.786 166.731 202.207 349.32  159.266 178.589\n",
-      " 321.966 213.451 309.326 180.917 236.868 270.814 183.777 238.294  99.286\n",
-      " 189.435 343.39  192.685 400.064 325.058 280.515 269.633 240.414 226.405\n",
-      " 238.028 223.087 226.388 262.694 198.718 180.581 266.174 190.732 345.083\n",
-      " 172.927 173.255 111.037 308.263 283.017 190.961 241.755 235.732 218.102\n",
-      " 149.303 283.192 263.684 194.427 234.139 233.163 234.132 261.105 299.866\n",
-      " 263.082 211.077 368.679 244.537 220.631 275.3   290.16  158.154 150.098\n",
-      " 176.207  92.672 196.013 193.864 394.273 248.495 215.719 142.969 168.272\n",
-      " 294.251 246.053 121.232 272.854 182.066 208.778 220.155 183.82  253.801\n",
-      " 136.572 191.57  367.864 227.146 129.419 275.416 235.48  294.223 204.863\n",
-      " 345.326 178.603 210.865 287.31  208.526 242.785 289.469 196.969 221.486\n",
-      " 237.018 203.997 336.7   194.835 214.346  90.258 166.875 208.879 318.358\n",
-      " 256.972 290.727 288.45  259.329 287.817 224.622 198.866 198.989 253.924\n",
-      " 184.026 293.092 148.175 251.771 213.633 242.827 271.228 225.343 295.545\n",
-      " 340.482 301.674 161.784 313.334 236.855 224.485 253.569 229.9   233.1\n",
-      " 251.523 240.329 309.948 316.465 251.587 285.528 252.358 161.108 243.542\n",
-      " 326.11  341.497 129.423 201.394 237.346 174.229 318.425 203.922 131.445\n",
-      " 203.985 340.531 221.089 213.75  259.648 270.858 262.369 267.197 199.955\n",
-      " 160.982 325.308 223.503 242.702  81.257 226.783 259.137 162.326 281.398\n",
-      " 228.652 177.143 168.153 374.897 287.342 400.4   266.737 266.256 218.338\n",
-      " 186.503 303.503 212.077 192.628 307.21  230.265 118.468 162.556 353.61\n",
-      " 103.354 161.279 174.707 158.022 265.014 271.416 218.342 284.421 164.453\n",
-      " 246.237 199.169 275.123 249.466 264.704 258.352 196.022 199.283 151.353\n",
-      " 229.172 307.633 266.934 257.773 186.539 200.053 294.921 353.615 301.071\n",
-      " 202.11  238.407 306.89  277.191 159.272 211.266 245.209 166.069 239.853\n",
-      " 286.604 245.367 327.996 219.68  265.703 195.302 174.563 327.947 306.691\n",
-      " 236.067 260.358 146.053 306.9   142.469 271.903 262.38  232.708 223.026\n",
-      " 172.539 358.763 261.149 228.229 159.191 114.914 246.069 298.247 286.143\n",
-      " 321.631 250.786  89.921 203.846 278.949 213.274 348.942 241.505 224.805\n",
-      " 246.988 179.951 268.116 227.735 284.605 268.638 323.257 231.631 244.451\n",
-      " 138.41  293.242 264.33  342.946 190.415 191.254 260.011 229.744 174.674\n",
-      " 218.972 325.063 250.191 185.516 263.331 207.009 155.046 127.583 285.788\n",
-      " 202.142 173.986 270.225 297.329 181.675 187.014 253.383 272.768 137.346\n",
-      " 227.571 256.666 324.01  182.055 223.517 298.641 363.567 195.183 247.143\n",
-      " 227.565 288.112 291.574 286.625 245.908 366.399 315.363 180.621 161.491\n",
-      " 282.696 269.773 199.645 206.215 361.622 154.845 304.672 310.499 147.954\n",
-      " 302.942 154.498 343.933 205.42  156.334 248.42  184.262 289.144 146.679\n",
-      " 255.651 173.394 293.747 282.888 308.005 271.09  100.689 211.697 333.44\n",
-      "  80.307 202.996 281.593 308.841 248.982 179.12  233.141 172.55  211.553\n",
-      " 127.881 339.066 191.544 358.989 236.036 253.02  213.212 164.88  148.497\n",
-      " 211.261 261.191 292.18  176.704 271.75  319.194 260.666 157.507 298.533\n",
-      " 208.113 240.287 197.957 247.937 149.727 176.172 284.661 211.267 259.921\n",
-      " 264.041 291.43  155.893 279.738 172.454 259.346 275.163 281.17  285.618\n",
-      " 307.056 243.479 172.531 337.868 222.975 360.096 163.369 214.565 245.343\n",
-      " 272.32  348.35  183.504 222.282 305.175 174.261 240.262 250.945 144.902\n",
-      " 276.103 275.413 208.405 135.609 196.155 209.232  81.919 248.318 307.3\n",
-      " 210.554 280.044 258.275 218.613 203.699 278.25  275.812 262.159 252.412\n",
-      " 233.632 284.823 333.914 194.717 229.347 223.825 208.173 229.153 256.977\n",
-      " 204.025 340.314 303.85  233.785 261.095 199.995 114.089 218.406 202.286\n",
-      " 186.277 199.586 207.707 211.23  196.669 180.042 337.794 192.197 438.166\n",
-      " 251.13  221.022 282.257 185.593 310.256 180.248 168.673 171.28  262.449\n",
-      "  88.282 124.392 206.663 236.407 179.483 197.695 262.8   239.388  35.845\n",
-      " 319.692 261.313 179.373 133.043 205.237 289.333 303.673 205.375  84.988\n",
-      " 177.496 214.856 250.352 181.339 198.716 327.127 180.802 383.904 291.676\n",
-      " 202.47  165.836 236.806 149.821 226.367 135.293 207.981 284.207 134.429\n",
-      " 239.42  263.032 275.512 224.31 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -83,9 +20,7 @@
     "arquivo.close()\n",
     "\n",
     "# Converta a lista de dados em um array NumPy\n",
-    "dados = np.array(dados)\n",
-    "\n",
-    "print(dados)"
+    "dados = np.array(dados)"
    ]
   },
   {
@@ -104,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1071,
+   "execution_count": 1088,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1072,
+   "execution_count": 1089,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1073,
+   "execution_count": 1090,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1074,
+   "execution_count": 1091,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1075,
+   "execution_count": 1092,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1076,
+   "execution_count": 1093,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1077,
+   "execution_count": 1094,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1078,
+   "execution_count": 1095,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1079,
+   "execution_count": 1096,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1080,
+   "execution_count": 1097,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1081,
+   "execution_count": 1098,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1082,
+   "execution_count": 1099,
    "metadata": {},
    "outputs": [
     {
@@ -446,10 +381,13 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "# Dividindo os dados em finais de semana (primeira metade) e dias úteis (segunda metade)\n",
-    "meio = len(dados) // 2\n",
-    "finais_de_semana = dados[:meio]\n",
-    "dias_uteis = dados[meio:]\n",
+    "# Dividindo os dados em finais de semana e dias úteis\n",
+    "def numpy_index(arr, valor):\n",
+    "    indice = np.where(arr == valor)[0][0]\n",
+    "    return int(indice)\n",
+    "\n",
+    "finais_de_semana = [i for i in dados if numpy_index(dados, i) % 7 == 5 or numpy_index(dados, i) % 7 == 6]\n",
+    "dias_uteis = [i for i in dados if numpy_index(dados, i) % 7 < 5 and numpy_index(dados, i) % 7 >= 0]\n",
     "\n",
     "# Nível de significância\n",
     "alpha = 0.05\n",
@@ -480,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1083,
+   "execution_count": 1100,
    "metadata": {},
    "outputs": [
     {
@@ -507,15 +445,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1084,
+   "execution_count": 1101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.14224907225095726\n",
-      "0.9313458986953518\n",
       "Há evidências suficientes, ao nível de significância de 5%, para confirmar que os dados são normalmente distribuídos, pois o p-value dos dados é de 0.9313 e é maior que o alpha (0.05).\n"
      ]
     }
@@ -532,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1085,
+   "execution_count": 1102,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1086,
+   "execution_count": 1103,
    "metadata": {},
    "outputs": [
     {
