--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instalar dependencias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dependencias\n",
+    "\n",
+    "dependencias.instalar_dependencias()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -261,7 +279,7 @@
     }
    ],
    "source": [
-    "# Crie um histograma com a curva de densidade de probabilidade\n",
+    "# histograma com a curva de densidade de probabilidade\n",
     "sns.histplot(dados, kde=True, color='skyblue')\n",
     "plt.title('Histograma com Curva de Densidade de Probabilidade')\n",
     "plt.xlabel('Valores')\n",
@@ -296,15 +314,13 @@
     "# ordenar os dados\n",
     "dados_originais = np.sort(dados)\n",
     "\n",
-    "# Crie um gráfico de linhas\n",
+    "# gráfico de linhas\n",
     "plt.plot(dados_originais)\n",
     "\n",
-    "# Personalize o gráfico (rótulos de eixo, título, etc.)\n",
     "plt.xlabel('Índice')\n",
     "plt.ylabel('Valor')\n",
     "plt.title('Gráfico de Linhas com trabalhos processados dentro de um servidor de jogos online')\n",
     "\n",
-    "# Exiba o gráfico\n",
     "plt.show()\n"
    ]
   },
@@ -332,14 +348,12 @@
     }
    ],
    "source": [
-    "# Crie o gráfico de boxplot\n",
+    "# gráfico de boxplot\n",
     "plt.boxplot(dados)\n",
     "\n",
-    "# Personalize o gráfico (rótulos de eixo, título, etc.)\n",
     "plt.ylabel('Valores')\n",
     "plt.title('Gráfico de Boxplot')\n",
     "\n",
-    "# Exiba o gráfico\n",
     "plt.show()"
    ]
   },
@@ -417,42 +431,39 @@
     }
    ],
    "source": [
-    "# Suponha que você tenha uma média (mu) e um desvio padrão (sigma) para suas amostras\n",
     "mu = media\n",
     "sigma = desvio_padrao\n",
     "\n",
     "# Cria um conjunto de valores x ao longo de um intervalo\n",
     "x = np.linspace(mu - 3*sigma, mu + 3*sigma, 1000)\n",
     "\n",
-    "# Calcula a função de densidade de probabilidade (PDF) da distribuição normal\n",
+    "# Calcula a função de densidade de probabilidade da distribuição normal\n",
     "y = stats.norm.pdf(x, mu, sigma)\n",
     "\n",
-    "# Cria o gráfico da distribuição normal\n",
+    "# gráfico da distribuição normal\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(x, y)\n",
     "\n",
-    "# Define os limites do gráfico\n",
+    "#  limites do gráfico\n",
     "plt.xlim(mu - 3*sigma, mu + 3*sigma)\n",
     "\n",
-    "# Define as regiões críticas para a hipótese\n",
+    "#  regiões críticas para a hipótese\n",
     "x1 = np.linspace(mu + 2*sigma, mu + 3*sigma, 1000)\n",
     "x2 = np.linspace(mu - 3*sigma, mu - 2*sigma, 1000)\n",
     "\n",
-    "# Calcula as PDFs para as regiões críticas\n",
+    "#  PDFs para as regiões críticas\n",
     "y1 = stats.norm.pdf(x1, mu, sigma)\n",
     "y2 = stats.norm.pdf(x2, mu, sigma)\n",
     "\n",
-    "# Preenche a região crítica relacionada à hipótese alternativa (H1)\n",
+    "# região crítica relacionada à hipótese alternativa (H1)\n",
     "plt.fill_between(x1, y1, color='red', alpha=.3, label='Região Crítica (H1)')\n",
     "\n",
-    "# Preenche a região fora da região crítica (rejeição da H0)\n",
+    "#  região fora da região crítica (rejeição da H0)\n",
     "plt.fill_between(x2, y2, color='white', alpha=1, label='Não Região Crítica (Aceitação da H0)')\n",
     "\n",
-    "# Adiciona um título e legenda\n",
     "plt.title('Distribuição Normal e Região Crítica; Média={:.2f}, Desvio Padrão={:.2f}'.format(mu, sigma))\n",
     "plt.legend()\n",
     "\n",
-    "# Exibe o gráfico\n",
     "plt.show()"
    ]
   },
