mudança na moda

--- a/src/projeto.ipynb
+++ b/src/projeto.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm\n",
+    "import statistics\n",
     "\n",
     "# abrir o arquivo para leitura\n",
     "arquivo = open('GAMES.txt', 'r')\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -112,21 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moda:  35.845\n"
+      "Moda:  263.235\n"
      ]
     }
    ],
    "source": [
-    "unique_values, counts = np.unique(dados, return_counts=True)\n",
-    "max_count_index = np.argmax(counts)\n",
-    "moda = unique_values[max_count_index]\n",
+    "import statistics\n",
+    "\n",
+    "moda = statistics.mode(dados)\n",
     "print('Moda: ', moda)"
    ]
   },
@@ -138,8 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Há evidências suficientes, ao nível de significância de 5%, para confirmar que os dados são normalmente distribuídos, pois o p-value dos dados é de 0.9313 e é maior que o alpha (0.05).\n"
+      "A hipótese nula é confirmada,com intervalo de confiança de 95%, ou seja, os dados são normalmente distribuídos, pois o p-value dos dados é de 0.9313 e é maior que o alpha (0.05).\n"
      ]
     }
    ],
@@ -416,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
